<?xml version="1.0"?>
<package format="2">
  <name>yellowarm</name>
  <version>0.0.0</version>
  <description>The yellowarm package</description>

  <license>BSD</license>
  <maintainer email="b1512539@planet.kanazawa-it.ac.jp">Haruya</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>roscpp</exec_depend> 
  <exec_depend>rospy</exec_depend> 
  <exec_depend>std_msgs</exec_depend> 
  <export>

  </export>
</package>
